WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308309
CRASH in WebCore::ReadableStream::state() const
https://bugs.webkit.org/show_bug.cgi?id=308309
Summary
CRASH in WebCore::ReadableStream::state() const
Jer Noble
Reported
2026-02-20 08:04:12 PST
CRASH in WebCore::ReadableStream::state() const
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2026-02-20 08:04:13 PST
<
rdar://problem/170649636
>
Jer Noble
Comment 2
2026-02-20 08:37:48 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59095
EWS
Comment 3
2026-02-23 14:50:38 PST
Committed
308072@main
(58e404642c05): <
https://commits.webkit.org/308072@main
> Reviewed commits have been landed. Closing PR #59095 and removing active labels.
EWS
Comment 4
2026-02-23 22:13:58 PST
Committed
305413.341@safari-7624-branch
(8390ba5809c8): <
https://commits.webkit.org/305413.341@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4544 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug