Cherry-pick 58e404642c05. rdar://171017421

CRASH in WebCore::ReadableStream::state() const
    rdar://170652029
    https://bugs.webkit.org/show_bug.cgi?id=308309

    Reviewed by Youenn Fablet.

    The Streams specification states for the releaseLock() method
    that the method should return early if `this.[[stream]]` is
    undefined, but it was possible for releaseLock() to call
    genericRelease() if m_stream was null, if m_internalDefaultReader
    is also null.

    Return early from releaseLock() if m_stream is null, and
    due to the law of unintended consequences, also return early
    from genericRelease() if m_stream is null, as well as from
    genericCancel() and setup(), which have similar issues.

    * Source/WebCore/Modules/streams/ReadableStreamDefaultReader.cpp:
    (WebCore::ReadableStreamDefaultReader::releaseLock):
    (WebCore::ReadableStreamDefaultReader::setup):
    (WebCore::ReadableStreamDefaultReader::genericRelease):

    Canonical link: https://commits.webkit.org/308072@main

Identifier: 305413.341@safari-7624-branch