Source/WebCore/Modules/streams/ReadableStreamDefaultReader.cpp
@@ -160,9 +160,12 @@ void ReadableStreamDefaultReader::read(JSDOMGlobalObject& globalObject, Ref<Read
 // https://streams.spec.whatwg.org/#default-reader-release-lock
 ExceptionOr<void> ReadableStreamDefaultReader::releaseLock(JSDOMGlobalObject& globalObject)
 {
+    if (!m_stream)
+        return { };
+
     if (RefPtr internalReader = this->internalDefaultReader()) {
         auto result = internalReader->releaseLock();
-        if (!result.hasException() && m_stream) {
+        if (!result.hasException()) {
             RefPtr stream = std::exchange(m_stream, { });
             stream->setDefaultReader(nullptr);
             stream = nullptr;
@@ -179,6 +182,9 @@ ExceptionOr<void> ReadableStreamDefaultReader::releaseLock(JSDOMGlobalObject& gl
 ExceptionOr<void> ReadableStreamDefaultReader::setup(JSDOMGlobalObject& globalObject)
 {
     RefPtr stream = m_stream;
+
+    if (!stream)
+        return Exception { ExceptionCode::TypeError, "stream is undefined"_s };
 
     if (stream->isLocked())
         return Exception { ExceptionCode::TypeError, "ReadableStream is locked"_s };
@@ -206,6 +212,8 @@ void ReadableStreamDefaultReader::genericRelease(JSDOMGlobalObject& globalObject
 
     ASSERT(stream);
     ASSERT(stream->defaultReader() == this);
+    if (!stream) [[unlikely]]
+        return;
 
     if (stream->state() == ReadableStream::State::Readable)
         Ref { m_closedDeferred }->reject(Exception { ExceptionCode::TypeError, "releasing stream"_s }, RejectAsHandled::Yes);
@@ -216,7 +224,7 @@ void ReadableStreamDefaultReader::genericRelease(JSDOMGlobalObject& globalObject
         m_closedPromise = WTF::move(promise);
     }
 
-    if (RefPtr controller = m_stream->controller())
+    if (RefPtr controller = stream->controller())
         controller->runReleaseSteps();
 
     stream->setDefaultReader(nullptr);
@@ -250,6 +258,11 @@ Ref<DOMPromise> ReadableStreamDefaultReader::genericCancel(JSDOMGlobalObject& gl
 
     ASSERT(stream);
     ASSERT(stream->defaultReader() == this);
+    if (!stream) [[unlikely]] {
+        auto [promise, deferred] = createPromiseAndWrapper(globalObject);
+        deferred->reject(Exception { ExceptionCode::TypeError, "no stream"_s });
+        return promise;
+    }
 
     return stream->cancel(globalObject, value);
 }
